<?xml version="1.0"?>
<package format="3">
  <name>transition_recipe_test</name>
  <version>0.0.0</version>
  <description>Test package for TransitionRecipe and ActionStep using a sample lifecycle node.</description>

  <maintainer email="shiryu.nakano@gmail.com">nkn4ryu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>

  <!-- テスト系が欲しければ追加で:
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
